--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
             "email": "tkachov.vadim@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+      "ext-mbstring": "*"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "Classes/"
